Changelog
=========

3.0a3 - unreleased
------------------

* Explicitly require Plone 4.1 / Zope 2.13.
  [hannosch]

* Depend on the new c.indexing 2.0a2.
  [hannosch]

* Added an `archetypes.schemaextender` dependency and register two fields for
  all objects providing `IATContentType`. `showinsearch` is a boolean field that
  can be used to hide specific content items from search results. `searchwords`
  is a lines field, which lets you specify words that an object should be found
  under.
  [hannosch]

* Standardize on `solr` as the i18n domain.
  [hannosch]

3.0a2 - 2011-07-10
------------------

* Adjust munin configs for query cache handlers to `c.r.solrinstance 3.5`
  changes using `FastLRUCache`.
  [hannosch]

* Added munin configs for the `/update/extract`, the direct update handler,
  query cache size and warmup time, admin file requests used to get the
  Solr schema and the searcher warmup time.
  [hannosch]

* Added tests for splitting words on `:` and `-`.
  [hannosch]

* Update example configuration to Solr 3.3.
  [hannosch]

* Add `getRID` and `_unrestrictedGetObject` to our flare implementation.
  [hannosch]

* Added documentation on setting up a master-slave configuration using the
  `SolrReplication` support.
  [hannosch]

* Adjust tests to work with latest `collective.recipe.solrinstance = 3.3` and
  its new ICU-based text field.
  [hannosch]

3.0a1 - 2011-06-23
------------------

Upgrade notes
*************

* Changed the names of the indexes used to emulate the `path` index. You need
  to adjust your schema and rename `physicalPath` to `path_string`, 
  `physicalDepth` to `path_depth` and `parentPaths` to `path_parents`. This
  also requires a full Solr reindex to pick up the new data.
  [hannosch]

Changes
*******

* Added `object_provides` index to example schema, as it's used in the
  collection portlet to find collections.
  [hannosch]

* Rewrote the `maintenance/sync` method for more performance, dropped the