@@ -108,9 +108,13 @@ class Search(object):
                     query[name] = '(%s)' % ' OR '.join(value)
                 continue
             elif isinstance(value, basestring):
-                if isWildCard(value) and field.class_ == 'solr.TextField':
-                    value = value.lower()   # wildcard searches need lower-case
-                value = quote(value)
+                if field.class_ == 'solr.TextField':
+                    if isWildCard(value):
+                        # wildcard searches need lower-case
+                        value = value.lower()
+                    value = quote(value, textfield=True)
+                else:
+                    value = quote(value)
                 if not value:   # don't search for empty strings, even quoted
                     continue
             else:
